fix broken CSS in other themes

--- a/data/res/stylesheet.css
+++ b/data/res/stylesheet.css
@@ -1,3 +1,3 @@
-#header button, #text_view {
+#header button, #text_view_area, #text_view, #text_view > * {
   background: transparent;
 }
